# Peacock

./: .gitignore  README.md  peacock.py  pyproject.toml  test.py
TRASH/: exec_from_memory.py  graveyard.py  sub.py
src/peaco/: daemon.py  peacock.py
