[project]
name = "peaco"
version = "1.0.0-alpha.1"
authors = [
    {name = "BluntBSE"},
]
description = "Fast arbitrary function parallelization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]
dependencies = [
    "pandas ~= 2.2.0"
]
